--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mcp-time",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A simple MCP server for getting current time",
   "main": "dist/server.js",
   "scripts": {
-    "mcp-time": "mcp-time"
+    "test": "ava -v"
   },
   "keywords": [
     "mcp",
