--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "mcp-time",
-  "version": "0.1.3",
-  "description": "A simple MCP server for getting current time",
-  "main": "dist/server.js",
+  "name": "@zeparhyfar/mcp-time",
+  "version": "1.0.0",
+  "description": "Simple MCP server for getting current time",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "ava -v"
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "keywords": [
     "mcp",
@@ -16,7 +17,22 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
-  }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZeparHyfar/mcp-time.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ZeparHyfar/mcp-time/issues"
+  },
+  "homepage": "https://github.com/ZeparHyfar/mcp-time#readme"
 }
