--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple MCP server for getting current time",
   "main": "dist/index.js",
   "bin": {
-    "mcp-time": "./dist/index.js"
+    "mcp-time": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
