--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "mcp-time",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "MCP server for getting current time",
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "build": "tsc && chmod +x dist/server.js",
-    "prepare": "npm run build"
+    "build": "tsc",
+    "prepare": "npm run build",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "keywords": [
     "mcp",
@@ -20,7 +21,10 @@
     "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.17",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
