--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mcp-time",
+  "name": "@dandeliongold/mcp-time",
   "version": "1.1.0",
-  "description": "MCP server for getting current time",
+  "description": "MCP server for getting current time in ISO format (YYYY-MM-DD HH:mm:ss) using JavaScript Date",
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
@@ -11,13 +11,14 @@
   },
   "keywords": [
     "mcp",
+    "model-context-protocol",
     "time",
     "server"
   ],
-  "author": "zepar",
+  "author": "dandeliongold",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.0.1",
+    "@modelcontextprotocol/sdk": "^1.4.1",
     "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
